use transition, prepare classes, update animation

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,98 @@
 @import './base.css';
+
+.weather-1000 {
+}
+.weather-1003 {
+}
+.weather-1006 {
+}
+.weather-1009 {
+}
+.weather-1030 {
+}
+.weather-1063 {
+}
+.weather-1066 {
+}
+.weather-1069 {
+}
+.weather-1072 {
+}
+.weather-1087 {
+}
+.weather-1114 {
+}
+.weather-1117 {
+}
+.weather-1135 {
+}
+.weather-1147 {
+}
+.weather-1150 {
+}
+.weather-1153 {
+}
+.weather-1168 {
+}
+.weather-1171 {
+}
+.weather-1180 {
+}
+.weather-1183 {
+}
+.weather-1186 {
+}
+.weather-1189 {
+}
+.weather-1192 {
+}
+.weather-1195 {
+}
+.weather-1198 {
+}
+.weather-1201 {
+}
+.weather-1204 {
+}
+.weather-1207 {
+}
+.weather-1210 {
+}
+.weather-1213 {
+}
+.weather-1216 {
+}
+.weather-1219 {
+}
+.weather-1222 {
+}
+.weather-1225 {
+}
+.weather-1237 {
+}
+.weather-1240 {
+}
+.weather-1243 {
+}
+.weather-1246 {
+}
+.weather-1249 {
+}
+.weather-1252 {
+}
+.weather-1255 {
+}
+.weather-1258 {
+}
+.weather-1261 {
+}
+.weather-1264 {
+}
+.weather-1273 {
+}
+.weather-1276 {
+}
+.weather-1279 {
+}
+.weather-1282 {
+}
